--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home </a>
+            <a class="nav-link" href="index.html">Home </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">School </a>
+            <a class="nav-link" href="school.html">School </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Event </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery </a>
+            <a class="nav-link" href="gallery.html">Gallery </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Notice Board </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us </a>
+            <a class="nav-link" href="contact.html">Contact Us </a>
           </li>
         </ul>
       </div>
@@ -62,7 +62,7 @@
     <div class="row">
       <div class="col-md-6">
         <h1 class="display-6 bg-primary text-center">Recent Events</h1>
-        <div class="border p-4">
+        <div class="border p-4" style="height: 535px;">
           <marquee behavior="" direction="up">    
             <p><span class="text-danger"> 21 may 2024</span>  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem, accusamus error! Assumenda maiores placeat maxime.</p>
             <p><span class="text-danger"> 21 may 2024</span>  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem, accusamus error! Assumenda maiores placeat maxime.</p>
@@ -93,7 +93,21 @@
       </div>
     </div>
   </div>
+<div class="container form-control p-3" style="max-height: 400px; max-width: 600px;">
+  <div class="row">
+    <h5 class="text-center">Login</h5>
+  </div>
+   <form action="" class="form-control-sm">
+                <label for=""  class="form-label">Name</label> <br>
+                <input type="text" class="form-control" >
+                <label for=""  class="form-label">Email</label> <br>
+                <input type="email" class="form-control" >
+                <label for=""  class="form-label">Password</label> <br>
+                <input type="password" class="form-control" >
 
+            <button class="btn btn-primary w-100 mt-4">Login</button>
+            </form>
+</div>
 
     
 </body>
