--- a/notice.html
+++ b/notice.html
@@ -25,7 +25,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Contact</title>
+    <title>Notice</title>
   </head>
   <body>
     <div>
@@ -73,28 +73,56 @@
         </div>
       </nav>
     </div>
-    <div class="container">
-      <div class="row text-center">
-        <h1 class="display-5">Contact</h1>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <address class="p-4">
-            Akshya Nagar <br> 1st Block 1st Cross, Rammurthy nagar, <br> Bangalore-560016 <br>
-            <a href="tel:+91987654321"">+91 987654321</a> <br>
-            <a href="mailto:textexample@gmail.com">textexample@gmail.com</a>
-          </address>
+    <div class="container-fluid">
+      <h1 class="text-center">Notice Board</h1>
+      <div class="row mt-3">
+        <div class="col-12 my-3">
+          <div class="bg-dark text-white p-3 position-relative">
+            <h3>Notice 1</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. In,
+              vero. Esse dolor recusandae explicabo tempore totam itaque harum
+              eligendi, inventore ipsum earum est consequuntur quod neque cum
+              laudantium saepe placeat?
+            </p>
+            <time
+              datetime=""
+              class="position-absolute end-0 top-0 bg-light text-black-50"
+              >12:00pm</time
+            >
+          </div>
         </div>
-        <div class="col-md-6">
-            <form action="">
-                <label for=""  class="form-label">Name</label> <br>
-                <input type="text" class="form-control" >
-                <label for=""  class="form-label">Email</label> <br>
-                <input type="email" class="form-control" >
-                <label for=""  class="form-label">Your Query</label> <br>
-                <textarea name="" id="" class="form-control"></textarea>
-<button class="btn btn-primary w-100 mt-4">Send</button>
-            </form>
+        <div class="col-12 my-3">
+          <div class="bg-dark text-white p-3 position-relative">
+            <h3>Notice 1</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. In,
+              vero. Esse dolor recusandae explicabo tempore totam itaque harum
+              eligendi, inventore ipsum earum est consequuntur quod neque cum
+              laudantium saepe placeat?
+            </p>
+            <time
+              datetime=""
+              class="position-absolute end-0 top-0 bg-light text-black-50"
+              >12:00pm</time
+            >
+          </div>
+        </div>
+        <div class="col-12 my-3">
+          <div class="bg-dark text-white p-3 position-relative">
+            <h3>Notice 1</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. In,
+              vero. Esse dolor recusandae explicabo tempore totam itaque harum
+              eligendi, inventore ipsum earum est consequuntur quod neque cum
+              laudantium saepe placeat?
+            </p>
+            <time
+              datetime=""
+              class="position-absolute end-0 top-0 bg-light text-black-50"
+              >12:00pm</time
+            >
+          </div>
         </div>
       </div>
     </div>
