--- a/school.html
+++ b/school.html
@@ -24,6 +24,13 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>School</title>
   </head>
@@ -58,13 +65,13 @@
               <a class="nav-link" href="school.html">School </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Event </a>
+              <a class="nav-link" href="events.html">Event </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="gallery.html">Gallery </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Notice Board </a>
+              <a class="nav-link" href="notice.html">Notice Board </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us </a>
@@ -72,6 +79,66 @@
           </ul>
         </div>
       </nav>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <h1>About School</h1>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-md-6">
+          <img
+            width="100%"
+            height=""
+            src="https://images.unsplash.com/photo-1611941671018-6c3907cb7a76?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fHNjaG9vbCUyMGJ1aWxkaW5nfGVufDB8fDB8fHww"
+            alt=""
+          />
+        </div>
+        <div class="col-md-6">
+          <h2>Our Mission</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+            veniam error qui in ad esse, nam voluptatum accusantium recusandae?
+            Cum perspiciatis suscipit magnam fugiat, vel asperiores neque
+            voluptates esse sed.
+          </p>
+          <p class="text-success">Enroll now for Join</p>
+          <button class="btn btn-outline-success">Join Now</button>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid my-5">
+      <div class="row p-0 justify-content-around">
+        <div class="col-md-3 my-3" style="width: 18rem">
+          <div class="text-center border shadow rounded-3 p-5 h-100">
+            <div class="display-2">
+              <i class="fa-solid fa-person-chalkboard"></i>
+            </div>
+            <div>
+              <h3>Best Teachers</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 my-3" style="width: 18rem">
+          <div class="text-center border shadow rounded-3 p-5 h-100">
+            <div class="display-2">
+              <i class="fa-solid fa-person-chalkboard"></i>
+            </div>
+            <div>
+              <h3>Best Teachers</h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 my-3" style="width: 18rem">
+          <div class="text-center border shadow rounded-3 p-5 h-100">
+            <div class="display-2">
+              <i class="fa-solid fa-building-columns"></i>
+            </div>
+            <div>
+              <h3>Good infrastructure</h3>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
