--- a/gallery.html
+++ b/gallery.html
@@ -58,13 +58,13 @@
               <a class="nav-link" href="school.html">School </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Event </a>
+              <a class="nav-link" href="events.html">Event </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="gallery.html">Gallery </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Notice Board </a>
+              <a class="nav-link" href="notice.html">Notice Board </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us </a>
